<resources>
    <string name="app_name">Ejercicio1_1</string>
    <string name="firma">Sergio Castillo | PMLu-1</string>

    <string name="label1">Número 1</string>
    <string name="label2">Número 2</string>

    <string name="hint1">Ingrese el primer número</string>
    <string name="hint2">Ingrese el segundo número</string>

    <string name="btn_suma">Suma</string>
    <string name="btn_resta">Resta</string>
    <string name="btn_mult">Multiplicación</string>
    <string name="btn_div">División</string>

    <string name="btn_ver">Ver Resultado</string>

    //Resultado Activity
    <string name="tit1">Resultado:</string>
</resources>